--- a/app/properties.env
+++ b/app/properties.env
@@ -1,4 +1,4 @@
-XTB_USERNAME=PLACEHOLDER
-XTB_PASSWORD=PLACEHOLDER
-XTB_API_URL=PLACEHOLDER
+XTB_USERID=11111
+XTB_PASSWORD=11111111
+XTB_API_URL=wss://ws.xtb.com/demo
 TICK_INTERVAL_SECONDS=5
